--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,13 +32,10 @@
 
 
     <string-array name="recipes_category">
-        <item>Chicken</item>
-        <item>Pork</item>
-        <item>Vegetable</item>
-        <item>Noodle</item>
         <item>Sea Food</item>
+        <item>Pork</item>
+        <item>Noodle</item>
         <item>Myanmar Traditional</item>
-
     </string-array>
 
     <string-array name="township_list">
@@ -71,5 +68,6 @@
     </string-array>
 
     <string name="content_authority">com.padc.recipes</string>
+    <string name="reset">Reset</string>
 
 </resources>
