--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
         <item>Pork</item>
         <item>Noodle</item>
         <item>Myanmar Traditional</item>
+        <item>All</item>
     </string-array>
 
     <string-array name="township_list">
